# Lecture2Graph

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.streamlit/: config.toml
core/lecture2graph/: __init__.py  cli.py  config.py  models.py
data/N2P7w22tN9c/: concepts.neural.json  graph.html  graph.hybrid.json  graph.neural.json  lecture2graph.json  notes.md  report.md
data/Tp37HXfekNo/: concepts.neural.json  graph.html  graph.hybrid.json  graph.neural.json  lecture2graph.json  notes.md  report.md
data/XRcC7bAtL3c/: concepts.neural.json  graph.html  graph.hybrid.json  graph.neural.json  lecture2graph.json  notes.md  report.md
data/azXr6nTaD9M/: concepts.neural.json  graph.html  graph.hybrid.json  graph.neural.json  lecture2graph.json  notes.md  report.md
data/eXWl-Uor75o/: concepts.neural.json  graph.html  graph.hybrid.json  graph.neural.json  lecture2graph.json  notes.md  report.md
docs/: good-first-issues.md  hardcoded-elements.md  symbolic-hardcoding.md
evaluation/: __init__.py  ablation.py  benchmark.py  metrics.py
evaluation/gold/: N2P7w22tN9c.json  Tp37HXfekNo.json  XRcC7bAtL3c.json  azXr6nTaD9M.json  eXWl-Uor75o.json
evaluation/results/: ablation_ocr.json  ablation_ocr.md  benchmark.json  benchmark.md
lecture2graph/: __init__.py  graphs.py
lecture2graph/hybrid/: __init__.py  fuse.py
lecture2graph/llm_pipeline/: __init__.py  m3_normalize.py  m4_concepts.py  m5_prereqs.py  pipeline.py
lecture2graph/neural/: __init__.py  concepts.py  from_cache.py  llm.py  normalize.py  pipeline.py  prereqs.py
lecture2graph/regex_pipeline/: __init__.py  m1_ingest.py  m4_concepts.py  m5_prereqs.py  pipeline.py
lecture2graph/symbolic/: __init__.py  concepts.py  extract.py  ingest.py  normalize.py  pipeline.py  prereqs.py  visualize.py
scripts/: demo.py  run_llm_batch.py
tests/: test_core.py
(+27 files in other folders)
