[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture2graph"
version = "0.2.0"
description = "Neuro-symbolic extraction of concept-prerequisite DAGs from code-mixed lecture videos, with an evaluation benchmark."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "openai-whisper",
    "pytesseract",
    "Pillow",
    "rapidfuzz",
    "networkx",
    # neural extractor uses a local OpenAI-compatible server (Ollama) via
    # stdlib urllib, no extra Python dependency required.
]

[project.scripts]
l2g-symbolic = "lecture2graph.symbolic.pipeline:run_pipeline"
l2g-fuse = "lecture2graph.hybrid.fuse:main"
l2g-bench = "evaluation.benchmark:main"
l2g-tutor = "lecture2graph.tutor.tutor:main"

[tool.setuptools]
packages = [
    "lecture2graph",
    "lecture2graph.symbolic",
    "lecture2graph.neural",
    "lecture2graph.hybrid",
    "lecture2graph.tutor",
    "evaluation",
]
